--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,9 @@
       "WithStatement"
     ],
     "no-unused-vars": 0,
+    "no-underscore-dangle": 0,
+    "no-multiple-empty-lines": 0,
+    "max-classes-per-file": 0,
     "no-console": ["error", { "allow": ["warn", "error", "log"] }]
   }
 }
