--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "starter",
+  "name": "ajs_1_8_1_set",
   "version": "1.0.0",
-  "description": "js env starter",
+  "description": "ajs_1_8_1_set",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development",
@@ -16,12 +16,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/homutovan/starter.git"
+    "url": "git+https://github.com/homutovan/AJS_1_8_1_set.git"
   },
   "bugs": {
-    "url": "https://github.com/homutovan/starter/issues"
+    "url": "https://github.com/homutovan/AJS_1_8_1_set/issues"
   },
-  "homepage": "https://github.com/homutovan/starter#readme",
+  "homepage": "https://github.com/homutovan/AJS_1_8_1_set#readme",
   "author": "homutovan",
   "license": "ISC",
   "devDependencies": {
